// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputHidden default 1`] = `
<input
  className="InputHidden-sc-1b60boq-0"
  type="hidden"
/>
`;

exports[`InputHidden with a value 1`] = `
<input
  className="InputHidden-sc-1b60boq-0"
  type="hidden"
  value="Some value"
/>
`;

exports[`InputHidden with name and id 1`] = `
<input
  className="InputHidden-sc-1b60boq-0"
  id="Bobby"
  name="Bob"
  type="hidden"
/>
`;
